external-crates/move/crates/move-compiler/tests/move_check/expansion/friend_decl_aliased_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/move_check/expansion/friend_decl_aliased_struct.move
---
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_aliased_struct.move:8:12
  │
8 │     friend A;
  │            ^ Unbound module alias 'A'
